--- a/index.html
+++ b/index.html
@@ -4,32 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>现代浏览器博物馆</title>
+    <title>Chaolei Hua - Undergraduate at UCSD</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
 	<script src="js/jquery-3.1.1.min.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function(){
-		    var bannerWrap = document.querySelector('.banner-wrap'),
-		        banner = bannerWrap.querySelector('#carousel-example-generic');
-		        banner.addEventListener('mousemove', function(e){
-		            var centerX = banner.offsetLeft + banner.offsetWidth / 2,
-		                centerY = banner.offsetTop + banner.offsetHeight / 2;        
-		            var deltaX = e.pageX - centerX,
-		                deltaY = e.pageY - centerY;
-		            var percentageX = deltaX / centerX,
-		                percentageY = deltaY / centerY;
-		            var deg = 10;
-		            this.style.transform = 'rotateX(' + percentageY * -deg + 'deg)' 
-		                                    + 'rotateY(' + percentageX * deg + 'deg)';
-		        });
-		        banner.addEventListener('mouseleave', function(e){
-		            this.style.transform = '';
-		        })    
-		});
-	</script>
+	<script src="js/3d.js"></script>
 </head>
 <style>
-    body{padding-top: 50px;padding-bottom: 40px;color: #5a5a5a;}
+    body{margin:0; padding-bottom: 40px;color: #5a5a5a;}
     #carousel-example-generic{
 	   	height: 500px;
 	    outline: 1px dash #eee;
@@ -39,8 +22,10 @@
     height: 500px;
     outline: 1px dash #eee;
     perspective: 1000px;
+    margin-top:-20px;
 	}	
     .carousel{height: 500px;background-color: #000;margin-bottom: 60px;}
+    
     .carousel .item{height: 500px;background-color: #000;}
     .carousel .img{width: 100%;}
     .carousel-caption p {margin-bottom: 20px;font-size: 20px;line-height: 1.8;}
@@ -51,8 +36,14 @@
     .feature-heading .text-muted{font-size: 28px;color: #999;}
 </style>
 <body>
-    <!-- 顶部导航 -->
-    <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="nabigation">
+  <div class="header">
+    <div class="header_resize">
+      <div class="logo"><h1><a href="index.html">SUPER<span>THUNDER</span></a> <small>by Chaolei Hua at UCSD</small></h1></div>
+      <div class="clr"></div>
+      <div class="clr"></div>
+    </div>
+  </div>
+    <nav class="navbar navbar-default navbar-inverse" role="nabigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#demo-navbar" aria-expanded="false">
@@ -61,23 +52,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">现代浏览器</a>
+                <a class="navbar-brand" href="#">Home</a>
             </div>
 
             <div class="collapse navbar-collapse" id="demo-navbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">综述</a></li>
-                    <li><a href="#">简述</a></li>
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">特点<span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#tab-chrome">Chrome</a></li>
-                            <li><a href="#tab-firefox">Firefox</a></li>
-                            <li><a href="#tab-opera">Opera</a></li>
-                            <li><a href="#tab-safari">Safari</a></li>
-                            <li><a href="#tab-ie">IE</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#" data-toggle="modal" data-target="#about">关于</a></li>
+                    <li><a href="#" data-toggle="modal" data-target="#about">About</a></li>
+                    <li><a href="#">Resume</a></li>
                 </ul>
             </div>
         </div>
@@ -90,49 +71,25 @@
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="4"></li>
         </ol>
 
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="images/chrome-big.jpg" alt="chrome">
+                <img src="images/IMG_0063.jpg" alt="chrome">
                 <div class="carousel-caption">
-                    <h1>Chrome</h1>
-                    <p>Chrome，又称Google浏览器，是一个由Google（谷歌）公司开发的网页浏览器。</p>
-                    <p><a href=""><button class="btn btn-lg btn-primary" type="button">点我下载</button></a></p>
+                    <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
                 </div>
             </div>
             <div class="item">
-                <img src="images/firefox-big.jpg" alt="chrome">
+                <img src="images/2.jpg" alt="chrome">
                 <div class="carousel-caption">
-                    <h1>Chrome</h1>
-                    <p>Chrome，又称Google浏览器，是一个由Google（谷歌）公司开发的网页浏览器。</p>
-                    <p><a href=""><button class="btn btn-lg btn-primary" type="button">点我下载</button></a></p>
+                    <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
                 </div>
             </div>
             <div class="item">
-                <img src="images/safari-big.jpg" alt="chrome">
+                <img src="images/3.jpg" alt="chrome">
                 <div class="carousel-caption">
-                    <h1>Chrome</h1>
-                    <p>Chrome，又称Google浏览器，是一个由Google（谷歌）公司开发的网页浏览器。</p>
-                    <p><a href=""><button class="btn btn-lg btn-primary" type="button">点我下载</button></a></p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="images/opera-big.jpg" alt="chrome">
-                <div class="carousel-caption">
-                    <h1>Chrome</h1>
-                    <p>Chrome，又称Google浏览器，是一个由Google（谷歌）公司开发的网页浏览器。</p>
-                    <p><a href=""><button class="btn btn-lg btn-primary" type="button">点我下载</button></a></p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="images/ie-big.jpg" alt="chrome">
-                <div class="carousel-caption">
-                    <h1>Chrome</h1>
-                    <p>Chrome，又称Google浏览器，是一个由Google（谷歌）公司开发的网页浏览器。</p>
-                    <p><a href=""><button class="btn btn-lg btn-primary" type="button">点我下载</button></a></p>
+                    <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
                 </div>
             </div>
         </div>
@@ -149,104 +106,11 @@
     </div>
     </div>
 
-    <!-- 三栏布局 -->
-    <div class="container" >
-        <div class="row" id="summary-container">
-            <div class="col-md-4">
-                <img src="images/chrome-logo-small.jpg" alt="Chrome">
-                <h2>Chrome</h2>
-                <p>Google Chrome，又称Google浏览器，是一个由Google（谷歌）公司开发的网页浏览器。</p>
-                <p><a href="#" class="btn btn-default">点我下载</a></p>
-            </div>
-            <div class="col-md-4">
-                <img src="images/firefox-logo-small.jpg" alt="Firefox">
-                <h2>Firefox</h2>
-                <p>Mozilla Firefox，中文名通常称为“火狐”或“火狐浏览器”，是一个开源网页浏览器。</p>
-                <p><a href="#" class="btn btn-default">点我下载</a></p>
-            </div>
-            <div class="col-md-4">
-                <img src="images/safari-logo-small.jpg" alt="Safari">
-                <h2>Safari</h2>
-                <p>Safari，是苹果计算机的最新操作系统Mac OS X中的浏览器。</p>
-                <p><a href="#" class="btn btn-default">点我下载</a></p>
-            </div>
-        </div>
-        <hr class="feature-divider">
-        <!-- 标签 -->
-        <ul class="nav nav-tabs" id="tab-list">
-            <li><a href="#tab-chrome" data-toggle="tab">Chrome</a></li>
-            <li><a href="#tab-firefox" data-toggle="tab">Firefox</a></li>
-            <li><a href="#tab-safari" data-toggle="tab">Safari</a></li>
-            <li><a href="#tab-opera" data-toggle="tab">Opera</a></li>
-            <li><a href="#tab-ie" data-toggle="tab">IE</a></li>
-        </ul>
-        <div class="tab-content">
-            <div class="tab-pane active" id="tab-chrome">
-                <div class="row feature">
-                    <div class="col-md-7">
-                        <h2 class="feature-heading">Google Chrome <span class="text-muted">使用最广的浏览器</span></h2>
-                        <p class="lead">Google Chrome，又称Google浏览器，是一个由Google（谷歌）公司开发的网页浏览器。该浏览器是基于其他开源软件所撰写，包括WebKit，目标是提升稳定性、速度和安全性，并创造出简单且有效率的使用者界面。</p>
-                    </div>
-                    <div class="col-md-5">
-                        <img class="img-responsive feature-image" src="images/chrome-logo.jpg" alt="chrome">
-                    </div>
-                </div>
-            </div>
-            <div class="tab-pane" id="tab-firefox">
-                <div class="row feature">
-                    <div class="col-md-5">
-                        <img class="img-responsive feature-image" src="images/firefox-logo.jpg" alt="chrome">
-                    </div>
-                    <div class="col-md-7">
-                        <h2 class="feature-heading">Mozilla Firefox <span class="text-muted">美丽的狐狸</span></h2>
-                        <p class="lead">Mozilla Firefox，中文名通常称为“火狐”或“火狐浏览器”，是一个开源网页浏览器，使用Gecko引擎（非ie内核），支持多种操作系统如Windows、Mac和linux。</p>
-                    </div>
-                </div>
-            </div>
-            <div class="tab-pane" id="tab-safari">
-                <div class="row feature">
-                    <div class="col-md-7">
-                        <h2 class="feature-heading">Safari <span class="text-muted">Mac用户首选</span></h2>
-                        <p class="lead">Safari，是苹果计算机的最新操作系统Mac OS X中的浏览器，使用了KDE的KHTML作为浏览器的运算核心。Safari在2003年1月7日首度发行测试版，并成为Mac OS X v10.3与之后的默认浏览器，也是iPhone与IPAD和iPod touch的指定浏览器。</p>
-                    </div>
-                    <div class="col-md-5">
-                        <img class="img-responsive feature-image" src="images/safari-logo.jpg" alt="chrome">
-                    </div>
-                </div>
-            </div>
-            <div class="tab-pane" id="tab-opera">
-                <div class="row feature">
-                    <div class="col-md-5">
-                        <img class="feature-image img-responsive" src="images/opera-logo.jpg"
-                        alt="Opera">
-                    </div>
-                    <div class="col-md-7">
-                        <h2 class="feature-heading">Opera <span class="text-muted">小众但易用</span>
-                        </h2>
-                        <p class="lead">Opera浏览器，是一款挪威Opera Software ASA公司制作的支持多页面标签式浏览的网络浏览器。是跨平台浏览器可以在Windows、Mac和Linux三个操作系统平台上运行。.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="tab-pane" id="tab-ie">
-                <div class="row feature">
-                    <div class="col-md-7">
-                        <h2 class="feature-heading">IE <span class="text-muted">你懂的</span></h2>
-                        <p class="lead">Internet Explorer，原称Microsoft Internet Explorer(6版本以前)和Windows Internet Explorer(7，8，9，10版本)，简称IE，是美国微软公司推出的一款网页浏览器。它采用的排版引擎(俗称内核)为Trident。</p>
-                    </div>
-                    <div class="col-md-5">
-                        <img class="feature-image img-responsive" src="images/ie-logo.jpg"
-                        alt="IE">
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <!-- 底部 -->
-        <footer>
-            <p class="pull-right"><a href="#top">返回顶部</a></p>
-            <p>2016</p>
-        </footer>
+    <div class = "footer">
+        <p>Copyright © 2016 superthunder.me</p>
     </div>
+
 
     <!-- 弹出框 -->
     <div class="modal fade" id="about">
@@ -254,13 +118,21 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">关于</h4>
+                    <h4 class="modal-title">About</h4>
                 </div>
                 <div class="modal-body">
-                    <p>慕课网隶属于北京慕课科技中心(有限合伙)，是一家从事互联网免费教学的网络教育公司。秉承“开拓、创新、公平、分享”的精神，将互联网特性全面的应用在教育领域，致力于为教育机构及求学者打造一站式互动在线教育品牌。</p>
+                    <h1>Chaolei Hua</h1> 
+                    <h2>Student Developer & Photographer & Thunder (QwQ)</h2>
+                    <h4>Thanks for visiting my personal website. My name is Chaolei Hua. Superthunder is actually the English tranlation of my Chinese first name. Right now, I am an undergraduate at University of California, San Diego, majoring in Math and Computer Science. I also minor in Management Science with interest in stock trading. My skills and interests vary from ios & web development, photograph, 3D rendering and data analysis. </h4>
+                    <h4>Seeking summer internship and research opportunity to apply what I learn into real world scenario in my junior year. Feel free to contact me if you have any interest, question, and suggestion!</h4>
+                    <a href="https://github.com/erichua03"><i class="fa fa-github" style="font-size:36px;color:#00c6ff;"></i></a>
+                    <a href="https://www.facebook.com/eric.hua.927"><i class="fa fa-facebook-official" style="font-size:36px;color:#00c6ff;"></i></a>
+                    <a href="mailto:c8hua@ucsd.edu"> <i class="fa fa-envelope" style="font-size:36px;color:#00c6ff;"></i></a>
+                    <a href="https://www.linkedin.com/in/chaolei-hua-430844149/"><i class="fa fa-linkedin-square" style="font-size:36px;color:#00c6ff;"></i></a>
+
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
