--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
 
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="images/IMG_0063.jpg" alt="chrome">
+                <img src="images/IMG_0063.JPG" alt="chrome">
                 <div class="carousel-caption">
                     <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
                 </div>
             </div>
             <div class="item">
-                <img src="images/2.jpg" alt="chrome">
+                <img src="images/2.JPG" alt="chrome">
                 <div class="carousel-caption">
                     <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
                 </div>
             </div>
             <div class="item">
-                <img src="images/3.jpg" alt="chrome">
+                <img src="images/3.JPG" alt="chrome">
                 <div class="carousel-caption">
                     <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
                 </div>
