--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     perspective: 1000px;
     margin-top:-20px;
 	}	
-    .carousel{height: 500px;background-color: #000;margin-bottom: 60px;}
+    .carousel{height: 500px;background-color: white;margin-bottom: 60px;}
     
     .carousel .item{height: 500px;background-color: #000;}
     .carousel .img{width: 100%;}
@@ -38,7 +38,7 @@
 <body>
   <div class="header">
     <div class="header_resize">
-      <div class="logo"><h1><a href="index.html">SUPER<span>THUNDER</span></a> <small>by Chaolei Hua at UCSD</small></h1></div>
+      <div class="logo"><h1><a href="index.html">SUPER<span>THUNDER</span></a><small>by Chaolei Hua at UCSD</small></h1></div>
       <div class="clr"></div>
       <div class="clr"></div>
     </div>
