--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	}	
     .carousel{height: 500px;background-color: white;margin-bottom: 60px;}
     
-    .carousel .item{height: 500px;background-color: #000;}
+    .carousel .item{height: 500px;background-color: white;}
     .carousel .img{width: 100%;}
     .carousel-caption p {margin-bottom: 20px;font-size: 20px;line-height: 1.8;}
     #summary-container{text-align: center;}
@@ -38,7 +38,7 @@
 <body>
   <div class="header">
     <div class="header_resize">
-      <div class="logo"><h1><a href="index.html">SUPER<span>THUNDER</span></a><small>by Chaolei Hua at UCSD</small></h1></div>
+      <div class="logo"><h1><a href="index.html">SUPER<span>THUNDER</span></a><small>By Chaolei Hua at UCSD</small></h1></div>
       <div class="clr"></div>
       <div class="clr"></div>
     </div>
@@ -71,10 +71,19 @@
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="5"></li>
         </ol>
 
         <div class="carousel-inner" role="listbox">
             <div class="item active">
+                <img src="images/1.JPG" alt="chrome">
+                <div class="carousel-caption">
+                    <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
+                </div>
+            </div>
+            <div class="item">
                 <img src="images/IMG_0063.JPG" alt="chrome">
                 <div class="carousel-caption">
                     <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
@@ -88,6 +97,18 @@
             </div>
             <div class="item">
                 <img src="images/3.JPG" alt="chrome">
+                <div class="carousel-caption">
+                    <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/4.JPG" alt="chrome">
+                <div class="carousel-caption">
+                    <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/5.JPG" alt="chrome">
                 <div class="carousel-caption">
                     <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
                 </div>
@@ -123,7 +144,7 @@
                 <div class="modal-body">
                     <h1>Chaolei Hua</h1> 
                     <h2>Student Developer & Photographer & Thunder (QwQ)</h2>
-                    <h4>Thanks for visiting my personal website. My name is Chaolei Hua. Superthunder is actually the English tranlation of my Chinese first name. Right now, I am an undergraduate at University of California, San Diego, majoring in Math and Computer Science. I also minor in Management Science with interest in stock trading. My skills and interests vary from ios & web development, photograph, 3D rendering and data analysis. </h4>
+                    <h4>Thanks for visiting my personal website. My name is Chaolei Hua. Superthunder is actually the English tranlation of my Chinese first name. Right now, I am an undergraduate at University of California, San Diego, majoring in Math and Computer Science. I also minor in Management Science. My skills and interests vary from ios & web development, photograph, 3D rendering and stock trading. </h4>
                     <h4>Seeking summer internship and research opportunity to apply what I learn into real world scenario in my junior year. Feel free to contact me if you have any interest, question, and suggestion!</h4>
                     <a href="https://github.com/erichua03"><i class="fa fa-github" style="font-size:36px;color:#00c6ff;"></i></a>
                     <a href="https://www.facebook.com/eric.hua.927"><i class="fa fa-facebook-official" style="font-size:36px;color:#00c6ff;"></i></a>
