--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 <style>
     body{margin:0; padding-bottom: 40px;color: #5a5a5a;}
     #carousel-example-generic{
-	   	height: 500px;
+	   	height: auto;
 	    outline: 1px dash #eee;
 	    perspective: 1000px;
     }
     .banner-wrap{
-    height: 500px;
+    height: auto;
     outline: 1px dash #eee;
     perspective: 1000px;
     margin-top:-20px;
 	}	
-    .carousel{height: 500px;background-color: white;margin-bottom: 60px;}
+    .carousel{height: 500px;background-color: white;}
     
-    .carousel .item{height: 500px;background-color: white;}
+    .carousel .item{height: 500px;background-color: white;width: auto;height:auto;}
     .carousel .img{width: 100%;}
-    .carousel-caption p {margin-bottom: 20px;font-size: 20px;line-height: 1.8;}
+    .carousel-caption p {margin-bottom: 0;font-size: 20px;line-height: 1.8;}
     #summary-container{text-align: center;}
     .feature-divider{margin: 40px 0;}
     .feature{padding: 30px 0;}
@@ -79,39 +79,21 @@
         <div class="carousel-inner" role="listbox">
             <div class="item active">
                 <img src="images/1.JPG" alt="chrome">
-                <div class="carousel-caption">
-                    <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
-                </div>
             </div>
             <div class="item">
                 <img src="images/IMG_0063.JPG" alt="chrome">
-                <div class="carousel-caption">
-                    <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
-                </div>
             </div>
             <div class="item">
                 <img src="images/2.JPG" alt="chrome">
-                <div class="carousel-caption">
-                    <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
-                </div>
             </div>
             <div class="item">
                 <img src="images/3.JPG" alt="chrome">
-                <div class="carousel-caption">
-                    <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
-                </div>
             </div>
             <div class="item">
                 <img src="images/4.JPG" alt="chrome">
-                <div class="carousel-caption">
-                    <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
-                </div>
             </div>
             <div class="item">
                 <img src="images/5.JPG" alt="chrome">
-                <div class="carousel-caption">
-                    <p><a href=""><button class="btn btn-lg btn-info" type="button">Explore</button></a></p>
-                </div>
             </div>
         </div>
 
