--- a/index.html
+++ b/index.html
@@ -11,30 +11,6 @@
 	<script src="js/jquery-3.1.1.min.js"></script>
 	<script src="js/3d.js"></script>
 </head>
-<style>
-    body{margin:0; padding-bottom: 40px;color: #5a5a5a;}
-    #carousel-example-generic{
-	   	height: auto;
-	    outline: 1px dash #eee;
-	    perspective: 1000px;
-    }
-    .banner-wrap{
-    height: auto;
-    outline: 1px dash #eee;
-    perspective: 1000px;
-    margin-top:-20px;
-	}	
-    .carousel{height: 500px;background-color: white;}
-    
-    .carousel .item{height: 500px;background-color: white;width: auto;height:auto;}
-    .carousel .img{width: 100%;}
-    .carousel-caption p {margin-bottom: 0;font-size: 20px;line-height: 1.8;}
-    #summary-container{text-align: center;}
-    .feature-divider{margin: 40px 0;}
-    .feature{padding: 30px 0;}
-    .feature-heading{margin-top: 120px;font-size: 50px;color: #2a6496;}
-    .feature-heading .text-muted{font-size: 28px;color: #999;}
-</style>
 <body>
   <div class="header">
     <div class="header_resize">
@@ -79,21 +55,39 @@
         <div class="carousel-inner" role="listbox">
             <div class="item active">
                 <img src="images/1.JPG" alt="chrome">
+                <div class="carousel-caption">
+                     <p><a href=""><button class="btn btn-lg btn-link" type="button">Hover Over Me</button></a></p>
+                </div>
             </div>
             <div class="item">
                 <img src="images/IMG_0063.JPG" alt="chrome">
+                <div class="carousel-caption">
+                     <p><a href=""><button class="btn btn-lg btn-link" type="button">Hover Over Me</button></a></p>
+                </div>
             </div>
             <div class="item">
                 <img src="images/2.JPG" alt="chrome">
+                <div class="carousel-caption">
+                     <p><a href=""><button class="btn btn-lg btn-link" type="button">Hover Over Me</button></a></p>
+                </div>
             </div>
             <div class="item">
                 <img src="images/3.JPG" alt="chrome">
+                <div class="carousel-caption">
+                     <p><a href=""><button class="btn btn-lg btn-link" type="button">Hover Over Me</button></a></p>
+                </div>
             </div>
             <div class="item">
                 <img src="images/4.JPG" alt="chrome">
+                <div class="carousel-caption">
+                     <p><a href=""><button class="btn btn-lg btn-link" type="button">Hover Over Me</button></a></p>
+                </div>
             </div>
             <div class="item">
                 <img src="images/5.JPG" alt="chrome">
+                <div class="carousel-caption">
+                     <p><a href=""><button class="btn btn-lg btn-link" type="button">Hover Over Me</button></a></p>
+                </div>
             </div>
         </div>
 
