--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="item">
                 <img src="images/IMG_0063.JPG" alt="chrome">
                 <div class="carousel-caption">
-                     <p><a href=""><button class="btn btn-lg btn-link" type="button">Hover Over Me</button></a></p>
+                     <p><a href=""><button class="btn btn-lg btn-link" type="button" style="color:black;">Hover Over Me</button></a></p>
                 </div>
             </div>
             <div class="item">
