--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="demo-navbar">
                 <ul class="nav navbar-nav">
                     <li><a href="#" data-toggle="modal" data-target="#about">About</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="http://superthunder.me//doc/Hua,Chaolei_Resume.pdf">Resume</a></li>
                 </ul>
             </div>
         </div>
