--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="modal-body">
                     <h1>Chaolei Hua</h1> 
                     <h2>Student Developer & Photographer & Thunder (QwQ)</h2>
-                    <h4>Thanks for visiting my personal website. My name is Chaolei Hua. Superthunder is actually the English tranlation of my Chinese first name. Right now, I am an undergraduate at University of California, San Diego, majoring in Math and Computer Science. I also minor in Management Science. My skills and interests vary from ios & web development, photograph, 3D rendering and stock trading. </h4>
+                    <h4>Thanks for visiting my personal website. My name is Chaolei Hua. Superthunder is actually the English translation of my Chinese first name. Right now, I am an undergraduate at University of California, San Diego, majoring in Math and Computer Science. I also minor in Management Science. My skills and interests vary from ios & web development, photograph, 3D rendering and stock trading. </h4>
                     <h4>Seeking summer internship and research opportunity to apply what I learn into real world scenario in my junior year. Feel free to contact me if you have any interest, question, and suggestion!</h4>
                     <a href="https://github.com/erichua03"><i class="fa fa-github" style="font-size:36px;color:#00c6ff;"></i></a>
                     <a href="https://www.facebook.com/eric.hua.927"><i class="fa fa-facebook-official" style="font-size:36px;color:#00c6ff;"></i></a>
